<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:onClick="prevPage"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:onClick="nextPage"
            android:text="@string/forward_button" />

        <EditText
            android:id="@+id/volume_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/back"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="34dp"
            android:ems="10" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/previous"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/pause" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_toRightOf="@+id/pause"
            android:onClick="onClick"
            android:text="@string/next" />

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_toLeftOf="@+id/pause"
            android:onClick="onClick"
            android:text="@string/prev" />

        <Button
            android:id="@+id/shuffle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_toLeftOf="@+id/next"
            android:onClick="onClick"
            android:text="@string/shuffle" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:onClick="onClick"
            android:text="@string/play" />

        <Button
            android:id="@+id/sync_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/shuffle_button"
            android:layout_alignParentBottom="true"
            android:onClick="onClick"
            android:text="@string/sync" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/volume_level"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:text="@string/volumelevelDisplay"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/balancer"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="onProgressChanged" />

        <SeekBar
            android:id="@+id/player_volume"
            android:progressDrawable="@color/blue"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/TextView01"
            android:layout_alignLeft="@+id/balancer"
            android:layout_marginBottom="15dp"
            android:onClick="onProgressChanged" />

    </RelativeLayout>

</LinearLayout>