<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createPlayListView"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/create_playlist_name"
            android:textColor="@color/white"
            android:textSize="20sp" >

            <requestFocus />
        </TextView>

        <EditText
            android:id="@+id/newPlaylistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <ListView
        android:id="@+id/masterList"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_weight="0.90" >
    </ListView>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:onClick="prevPage"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/back"
            android:layout_weight="1"
            android:onClick="createPlaylist"
            android:text="@string/create_playlist" />

    </RelativeLayout>

</LinearLayout>